chore: fixing nav spacing and mobile view of card listings

--- a/src/components/Listings/Listings.module.scss
+++ b/src/components/Listings/Listings.module.scss
@@ -45,6 +45,10 @@
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   grid-template-rows: repeat(auto-fill, 1fr);
+
+  @media(max-width: 768px) {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
 }
 
 .dark {
