--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -43,6 +43,10 @@
 
 }
 
+.links {
+  padding: 10px 10px !important;
+}
+
 .navLinkLight {
   &:hover {
     color: #111;
